[package]
name = "pingly"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "TLS/HTTP2 tracking server written in Rust"
authors = ["0x676e67 <gngppz@gmail.com>"]
repository = "https://github.com/penumbra-x/pingly"

[dependencies]
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
axum = { version = "0.8.1", features = ["http2"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tower-http = { version = "0.6.2", default-features = false, features = ["trace", "cors"] }
tower = { version = "0.5.2", default-features = false, features = ["limit"] }

tcmalloc = { version = "0.3.0", optional = true }
snmalloc-rs = { version = "0.3.4", optional = true }
rpmalloc = { version = "0.2.2", optional = true }
jemallocator = { package = "tikv-jemallocator", version = "0.6", optional = true }
mimalloc = { version = "0.1.39", default-features = false, optional = true }

[target.'cfg(target_family = "unix")'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.29.0", features = ["user", "signal"] }
sysinfo = { version = "0.30", default-features = false }

[features]
default = ["mimalloc"]
jemalloc = ["jemallocator"]
tcmalloc = ["tcmalloc/bundled"]
snmalloc = ["snmalloc-rs"]
rpmalloc = ["dep:rpmalloc"]
mimalloc = ["dep:mimalloc"]

[profile.release]
opt-level = 's'
codegen-units = 1
lto = true
strip = true
panic = "abort"