[package]
name = "pingly"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "Analysis server for TLS and HTTP/1/2/3"
keywords = ["http", "server", "web", "ja3", "ja4"]
authors = ["0x676e67 <gngppz@gmail.com>"]
repository = "https://github.com/0x676e67/pingly"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
axum = { version = "0.8.1", features = ["http2"] }
axum-extra = { version = "0.10.0", default-features = false, features = [
    "erased-json",
] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tower-http = { version = "0.6.2", default-features = false, features = [
    "trace",
    "cors",
] }
tower = { version = "0.5.2", default-features = false, features = ["limit"] }
rcgen = "0.14.1"
bytes = "1.9.0"
md5 = "0.8.0"
hex = "0.4.3"

tokio-rustls = { version = "0.26", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
httlib-hpack = "0.1.3"
pin-project-lite = "0.2.9"
tls-parser = "0.12.0"
httparse = "1.8.0"
boxcar = "0.2.8"

tcmalloc = { version = "0.3.0", optional = true }
snmalloc-rs = { version = "0.3.4", optional = true }
rpmalloc = { version = "0.2.2", optional = true }
jemallocator = { package = "tikv-jemallocator", version = "0.6", optional = true }
mimalloc = { version = "0.1.39", default-features = false, optional = true }

[target.'cfg(target_family = "unix")'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.30.1", features = ["user", "signal"] }
sysinfo = { version = "0.36", default-features = false, features = ["system"] }

[features]
default = ["mimalloc"]
jemalloc = ["jemallocator"]
tcmalloc = ["tcmalloc/bundled"]
snmalloc = ["snmalloc-rs"]
rpmalloc = ["dep:rpmalloc"]
mimalloc = ["dep:mimalloc"]

[profile.release]
opt-level = 's'
codegen-units = 1
lto = true
strip = true
panic = "abort"
